--- a/src/UI/Seller/src/app/shared/containers/category-table/category-table.component.html
+++ b/src/UI/Seller/src/app/shared/containers/category-table/category-table.component.html
@@ -13,7 +13,7 @@
         <category-form btnText="Create"
                        (formSubmitted)="addCategory($event)">
         </category-form>
-      </pa-modal>
+    </shared-modal>
     </div>
   </div>
   <div class="alert alert-info mt-2"
