1st day ngx-shopper commit

--- a/src/UI/Seller/src/app/shared/components/address-form/address-form.component.html
+++ b/src/UI/Seller/src/app/shared/components/address-form/address-form.component.html
@@ -103,6 +103,18 @@
   </div>
   <div class="row form-group">
     <label class="col-sm-3 control-label font-weight-bold mt-1"
+           for="Landmark">Landmark</label>
+    <div class="col-sm-9">
+      <input type="text"
+             formControlName="Landmark"
+             class="form-control"
+             id="Landmark"
+             placeholder="(optional)"
+             autocomplete="off" />
+    </div>
+  </div>
+  <div class="row form-group">
+    <label class="col-sm-3 control-label font-weight-bold mt-1"
            for="City">City</label>
     <div class="col-sm-9">
       <input type="text"
