--- a/src/UI/Seller/src/app/shared/components/user-form/user-form.component.html
+++ b/src/UI/Seller/src/app/shared/components/user-form/user-form.component.html
@@ -33,6 +33,15 @@
               </div>
        </div>
        <div class="form-group row">
+              <label for="name" class="col-sm-3 control-label font-weight-bold mt-1">Blood Group</label>
+               <div class="col-sm-9">
+                 <select class="form-control" formControlName="bloodgroup" id="bloodgroup" >
+                   <option value=""   >Select Blood Group</option>
+                   <option *ngFor="let bldgrp of bloodGroupItems" value="{{bldgrp.id}}" >{{bldgrp.name}}</option>
+                 </select>
+               </div>
+          </div>
+       <div class="form-group row">
               <label for="email" class="col-sm-3 control-label font-weight-bold mt-1">Email</label>
               <div class="col-sm-9">
                      <input type="text" formControlName="Email" class="form-control" id="email" />
@@ -60,10 +69,10 @@
        </div>
 
        <div class="form-group row">
-              <label for="ZipCode" class="col-sm-3 control-label font-weight-bold mt-1">zipcode</label>
+              <label for="ZipCode" class="col-sm-3 control-label font-weight-bold mt-1">Zipcode</label>
               <div class="col-sm-9">
                      <input type="text" formControlName="ZipCode" class="form-control" id="ZipCode" />
-                     <span *ngIf="hasRequiredError('ZipCode')" class="error-message">zipcode is Required</span>
+                     <span *ngIf="hasRequiredError('ZipCode')" class="error-message">Zipcode is Required</span>
                      <span *ngIf="hasPatternError('ZipCode')" class="error-message">Not Valid zipcode</span>
               </div>
        </div>
