--- a/src/UI/Seller/src/app/shared/containers/user-table-showgroups/user-table-showgroups.component.html
+++ b/src/UI/Seller/src/app/shared/containers/user-table-showgroups/user-table-showgroups.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4">
     <div class="row">
       <div class="col-8">
-        <h1>Products-Category</h1>
+        <h1>Address-Assignment</h1>
       </div>
     </div>
     <div class="mt-4"
@@ -18,31 +18,39 @@
               <th *ngIf="columns.indexOf('ID') > -1">
                 <shared-sort-column fieldName="ID"
                                     [currentSort]="requestOptions.sortBy"
-                                    (sort)="sortChanged($event)">ID</shared-sort-column>
+                                    (sort)="sortChanged($event)">Address ID</shared-sort-column>
               </th>
               <th *ngIf="columns.indexOf('Name') > -1">
                 <shared-sort-column fieldName="Name"
                                     [currentSort]="requestOptions.sortBy"
-                                    (sort)="sortChanged($event)">Name</shared-sort-column>
+                                    (sort)="sortChanged($event)">User ID</shared-sort-column>
               </th>
-              <th *ngIf="columns.indexOf('Active') > -1">Active</th>
+              <th *ngIf="columns.indexOf('Active') > -1">IsShipping</th>
+            
+            <th *ngIf="columns.indexOf('Active') > -1">IsBilling</th>
             </tr>
           </thead>
           <tbody>
             <tr *ngFor="let allcategoriy of categories.Items">
               <th *ngIf="columns.indexOf('Assign') > -1">
               </th>
-              <td *ngIf="columns.indexOf('ID') > -1">{{allcategoriy.ID}}</td>
+              <td *ngIf="columns.indexOf('ID') > -1">{{allcategoriy.AddressID}}</td>
               <td *ngIf="columns.indexOf('Name') > -1">
-                  {{allcategoriy.Name}}
-                <a [routerLink]="['/products', product.ID]">{{allcategoriy.Name}}</a>
-                </td>
+                  {{allcategoriy.UserID}}
+                <!-- <a [routerLink]="['/products', product.ID]">{{allcategoriy.Name}}</a>
+   -->            </td>
               <td *ngIf="columns.indexOf('Active') > -1"
                   class="text-center">
                 <fa-icon aria-hidden="true"
                          [ngClass]="{'text-success': allcategoriy.Active}"
                          [icon]="faCircle"></fa-icon>
               </td>
+              <td *ngIf="columns.indexOf('Active') > -1"
+                class="text-center">
+              <fa-icon aria-hidden="true"
+                       [ngClass]="{'text-success': allcategoriy.Active}"
+                       [icon]="faCircle"></fa-icon>
+            </td>
             </tr>
           </tbody>
         </table>
