User-Address Assignement

--- a/src/UI/Seller/src/app/shared/components/user-form/user-form.component.html
+++ b/src/UI/Seller/src/app/shared/components/user-form/user-form.component.html
@@ -37,7 +37,7 @@
                <div class="col-sm-9">
                  <select class="form-control" formControlName="bloodgroup" id="bloodgroup" >
                    <option value=""   >Select Blood Group</option>
-                   <option *ngFor="let bldgrp of bloodGroupItems" value="{{bldgrp.id}}" >{{bldgrp.name}}</option>
+                   <option *ngFor="let bldgrp of bloodGroupItems" value="{{bldgrp.name}}" >{{bldgrp.name}}</option>
                  </select>
                </div>
           </div>
